--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{% block title %}{% endblock %}</title>
+    <title>FreeStreamMovies | {% block title %}{% endblock %}</title>
   </head>
   <body>
     <nav>
