--- a/src/templates/movies/details.html
+++ b/src/templates/movies/details.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 <!---->
-{% block title %}FreeStreamMovies | {{ movie.title }}{% endblock %}
+{% block title %}{{ movie.title }}{% endblock %}
 <!---->
 {% block content %}
 <h2>{{ movie.title }}</h2>
