--- a/src/templates/movies/search_results.html
+++ b/src/templates/movies/search_results.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 <!---->
-{% block title %}FreeStreamMovies - Search Results{% endblock %}
+{% block title %}Search Results{% endblock %}
 <!---->
 {% block content %}
 <h2>Search Results</h2>
