feat: create frontend helper functions
Created functions to parse and serialize HTTP cookies.

Created a function to print Axios response errors to console.

There are no tests for logAxiosError, because it is used for only
printing out errors to console.

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FreeStreamMovies | {% block title %}{% endblock %}</title>
+    <script src="/static/helperFunctions.js"></script>
   </head>
   <body>
     <nav>
@@ -19,13 +20,13 @@
       </ul>
     </nav>
     {% with messages = get_flashed_messages(with_categories=true) %}
-    {% if messages %}
-    <ul class=flashes>
+      {% if messages %}
+      <ul class=flashes>
         {% for category, message in messages %}
         <li class="{{ category }}">{{ message }}</li>
         {% endfor %}
-    </ul>
-    {% endif %}
+      </ul>
+      {% endif %}
     {% endwith %}
     {% block content %}{% endblock %}
     {% block scripts %}{% endblock %}
