--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FreeStreamMovies | {% block title %}{% endblock %}</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
+    <link rel="stylesheet" href="/static/app.css" />
     <script src="/static/helperFunctions.js"></script>
   </head>
   <body>
@@ -29,6 +31,13 @@
       {% endif %}
     {% endwith %}
     {% block content %}{% endblock %}
+
+    <script
+      src="https://code.jquery.com/jquery-3.7.1.slim.js"
+      integrity="sha256-UgvvN8vBkgO0luPSUl2s8TIlOSYRoGFAX4jlCIm9Adc="
+      crossorigin="anonymous">
+    </script>
+    <script src="https://unpkg.com/axios@1.7.3/dist/axios.js"></script>
     {% block scripts %}{% endblock %}
   </body>
 </html>
