--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -26,5 +26,5 @@
 {% endblock %}
 <!---->
 {% block scripts %}
-<script src="/static/movies/home.js" defer></script>
+<script src="/static/home.js" defer></script>
 {% endblock %}
