feat: add movie posters to homepage
In home.js, added movie poster retrieval for
getMoviesFromAllServices and handleServiceMoviesPageChange.

Added new parameter, moviePosterData, to buildMoviesDiv, which will be
used to load the movie posters.

Updated tests accordingly.

Also changed some descriptions and variable names for clarity.

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -26,5 +26,6 @@
 {% endblock %}
 <!---->
 {% block scripts %}
+<script src="/static/moviePosters.js" defer></script>
 <script src="/static/home.js" defer></script>
 {% endblock %}
