feat: display movie poster in details page
Had the movie poster be displayed in the movie details page.

Also in the tests, removed variables for holding values, such as
"movie_id = movie.id".  These variables were made, because in the past,
when running a lot of tests, model objects would be removed from memory
soon after they were initialized and assigned.  Having variables such
as "movie_id" would allow assertions to work.  They are removed now to
clean up code.  They will be put back only if the issue comes up.

--- a/src/templates/movies/details.html
+++ b/src/templates/movies/details.html
@@ -3,6 +3,7 @@
 {% block title %}{{ movie.title }}{% endblock %}
 <!---->
 {% block content %}
+<img src="{{ movie_poster.link }}" alt="{{ movie.title }} Poster" width="360" height="480" />
 <h2>{{ movie.title }}</h2>
 <p>{{ movie.release_year }}</p>
 <p>{{ movie.runtime }} minutes</p>
