--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -12,29 +12,7 @@
     <script src="/static/helperFunctions.js"></script>
   </head>
   <body>
-    <nav>
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li>
-          <form action="/movies" role="search">
-            <input
-              type="search"
-              name="title"
-              placeholder="Search Movie Titles"
-              aria-label="Search Movie Titles"
-              required
-            />
-          </form>
-        </li>
-        <li><a href="/users/registration">Register</a></li>
-        <li><a href="/users/login">Login</a></li>
-        <li>
-          <form action="/users/logout" method="post">
-            <button type="submit">Logout</button>
-          </form>
-        </li>
-      </ul>
-    </nav>
+    {% include 'partials/navbar.html' %}
     {% with messages = get_flashed_messages(with_categories=true) %}
       {% if messages %}
       <ul class=flashes>
