--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -8,6 +8,12 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="/static/app.css" />
     <script src="/static/helperFunctions.js"></script>
   </head>
@@ -15,11 +21,18 @@
     {% include 'partials/navbar.html' %}
     {% with messages = get_flashed_messages(with_categories=true) %}
       {% if messages %}
-      <ul class=flashes>
-        {% for category, message in messages %}
-        <li class="{{ category }}">{{ message }}</li>
-        {% endfor %}
-      </ul>
+        <div class="container-md my-2">
+          {% for category, message in messages %}
+          <div class="row">
+            <div class="col-10 mx-auto">
+              <div class="alert alert-{{ category }} alert-dismissible" role="alert">
+                {{ message }}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+              </div>
+            </div>
+          </div>
+          {% endfor %}
+        </div>
       {% endif %}
     {% endwith %}
     {% block content %}{% endblock %}
@@ -30,6 +43,11 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://unpkg.com/axios@1.7.3/dist/axios.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
     {% block scripts %}{% endblock %}
   </body>
 </html>
