--- a/src/templates/movies/search_results.html
+++ b/src/templates/movies/search_results.html
@@ -3,19 +3,50 @@
 {% block title %}Search Results{% endblock %}
 <!---->
 {% block content %}
-<h2>Search Results</h2>
-  {% if movies|length == 0 %}
-  <p>No results found.</p>
-  {% else %}
-    {% for movie in movies %}
-    <div id="movie-{{ movie['id'] }}">
-      <a href="movie/{{ movie['id'] }}">
-        <img src="{{ movie['imageSet']['verticalPoster']['w240'] }}" />
-      </a>
-      <h3>{{ movie['title'] }}</h3>
-      <span>({{ movie['releaseYear'] }})</span>
-      <p>{{ movie['overview'] }}</p>
-    </div>
-    {% endfor %}
-  {% endif %}
+<main class="container">
+  <section>
+    <h2>Search Results</h2>
+
+    {% if movies|length == 0 %}
+    <p>No results found.</p>
+    {% else %}
+      {% for movie in movies %}
+      <section id="movie-{{ movie['id'] }}" class="card my-3">
+        <a class="text-reset text-decoration-none" href="movie/{{ movie['id'] }}">
+          <div class="row g-0">
+
+            <div class="col-12 col-sm-auto text-center">
+              <picture>
+                <source
+                  media="(min-width: 576px)"
+                  srcset="{{ movie['imageSet']['verticalPoster']['w240'] }}"
+                  width="240"
+                  height="320"
+                /> <!-- The media min-width size will need to match Bootstrap's Extra small size. -->
+                <img
+                  class="img-fluid w-100 h-100 rounded"
+                  src="{{ movie['imageSet']['horizontalPoster']['w480'] }}"
+                  alt="Movie poster of {{ movie['title'] }}"
+                  width="480"
+                  height="270"
+                />
+              </picture>
+            </div>
+
+            <div class="col-12 col-sm">
+              <article class="card-body">
+                <h3 class="card-title">{{ movie['title'] }}</h3>
+                <span>({{ movie['releaseYear'] }})</span>
+                <p class="card-text">{{ movie['overview'] }}</p>
+              </article>
+            </div>
+
+          </div>
+
+        </a>
+      </section>
+      {% endfor %}
+    {% endif %}
+  </section>
+</main>
 {% endblock %}
