--- a/src/templates/users/login.html
+++ b/src/templates/users/login.html
@@ -3,7 +3,13 @@
 {% block title %}User Login{% endblock %}
 <!---->
 {% block content %}
-<h1>User Login</h1>
-{% include 'partials/basic_form.html' %}
+<main class="container text-center">
+  <h1 class="m-4">User Login</h1>
+  <div class="row">
+    <div class="col col-sm-9 col-md-6 mx-auto">
+      {% include 'partials/basic_form.html' %}
+    </div>
+  </div>
+</main>
 <!---->
 {% endblock %}
