fix: display info for no services on homepage
When a country doesn't have any free streaming services, nothing is
displayed on the homepage.  This can cause confusion.

A piece of text is now added to the homepage, saying that there aren't
any free streaming services.

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -4,36 +4,50 @@
 <!---->
 {% block content %}
 <div class="container">
-  {% for service in services %}
-  <div class="row my-4">
-    <div class="col">
-      <section id="section-{{ service.id }}" class="section-service card">
-        <div class="section-service__div-logo card-header color-bg-secondary">
-          {% if theme == 'dark' %}
-          <img src="{{ service.dark_theme_image }}" alt="service.name" height="72" />
-          {% else %}
-          <img src="{{ service.light_theme_image }}" alt="service.name" height="72" />
-          {% endif %}
-        </div>
-        <div class="section-service__div-movies card-body container" data-service="{{ service.id }}">
-          <div class="row">
-            <div class="col-auto p-0 my-auto">
-              <i class="btn btn-lg bi bi-arrow-left-circle-fill bi-arrow--hidden"></i>
-            </div>
-            <div class="col container text-center">
-              <ul class="section-service__list-movies row m-0 list-unstyled">
-                <li class="col">Loading Movies...</li>
-              </ul>
-            </div>
-            <div class="col-auto p-0 my-auto">
-              <i class="btn btn-lg bi bi-arrow-right-circle-fill bi-arrow--hidden"></i>
+  {% if services|length == 0 %}
+    <div class="row my-4">
+      <div class="col">
+        <section class="card">
+          <div class="card-header p-5 color-bg-secondary">
+          </div>
+          <div class="card-body text-center">
+            <p class="p-5 m-0">No free streaming services</p>
+          </div>
+        </section>
+      </div>
+    </div>
+  {% else %}
+    {% for service in services %}
+    <div class="row my-4">
+      <div class="col">
+        <section id="section-{{ service.id }}" class="section-service card">
+          <div class="section-service__div-logo card-header color-bg-secondary">
+            {% if theme == 'dark' %}
+            <img src="{{ service.dark_theme_image }}" alt="service.name" height="72" />
+            {% else %}
+            <img src="{{ service.light_theme_image }}" alt="service.name" height="72" />
+            {% endif %}
+          </div>
+          <div class="section-service__div-movies card-body container" data-service="{{ service.id }}">
+            <div class="row">
+              <div class="col-auto p-0 my-auto">
+                <i class="btn btn-lg bi bi-arrow-left-circle-fill bi-arrow--hidden"></i>
+              </div>
+              <div class="col container text-center">
+                <ul class="section-service__list-movies row m-0 list-unstyled">
+                  <li class="col">Loading Movies...</li>
+                </ul>
+              </div>
+              <div class="col-auto p-0 my-auto">
+                <i class="btn btn-lg bi bi-arrow-right-circle-fill bi-arrow--hidden"></i>
+              </div>
             </div>
           </div>
-        </div>
-      </section>
+        </section>
+      </div>
     </div>
-  </div>
-  {% endfor %}
+    {% endfor %}
+  {% endif %}
 </div>
 {% endblock %}
 <!---->
