style: add space for cards on homepage
Added some padding to the "Loading Movies..." initial display of
streaming service cards and to the "No movies found" display for
streaming services.  This is done to make it look nicer.

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -35,7 +35,9 @@
               </div>
               <div class="col container text-center">
                 <ul class="section-service__list-movies row m-0 list-unstyled">
-                  <li class="col">Loading Movies...</li>
+                  <li class="col">
+                    <p class="p-5 m-0">Loading Movies...</p>
+                  </li>
                 </ul>
               </div>
               <div class="col-auto p-0 my-auto">
