--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -30,8 +30,8 @@
           </div>
           <div class="section-service__div-movies card-body container" data-service="{{ service.id }}">
             <div class="row">
-              <div class="col-auto p-0 my-auto">
-                <i class="btn btn-lg bi bi-arrow-left-circle-fill bi-arrow--hidden"></i>
+              <div class="col-auto p-0">
+                <i class="bi bi-arrow-left p-2 bi-arrow--hidden"></i>
               </div>
               <div class="col container text-center">
                 <ul class="section-service__list-movies row m-0 list-unstyled">
@@ -40,8 +40,8 @@
                   </li>
                 </ul>
               </div>
-              <div class="col-auto p-0 my-auto">
-                <i class="btn btn-lg bi bi-arrow-right-circle-fill bi-arrow--hidden"></i>
+              <div class="col-auto p-0">
+                <i class="bi bi-arrow-right p-2 bi-arrow--hidden"></i>
               </div>
             </div>
           </div>
