--- a/src/templates/partials/navbar.html
+++ b/src/templates/partials/navbar.html
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-expand-md color-bg-primary">
+<nav class="navbar navbar-expand-md color-bg-primary px-2">
   <div class="container-fluid">
 
-    <a class="navbar-brand color-tertiary" href="{{ url_for('home') }}">Home</a>
+    <a class="navbar-brand text-light" href="{{ url_for('home') }}">Home</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -45,7 +45,7 @@
           </div>
         </li>
 
-        <li class="nav-item p-0">
+        <li class="nav-item mx-lg-2">
           <form id="form-country-selection" class="my-2 my-md-0">
             <select class="form-select" aria-label="Select Country">
               <option value="ae" title="United Arab Emirates">🇦🇪 سع</option>
